added to AboutMe

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -114,7 +114,7 @@
         <div class="section">
             <div class="text">
                 <h2>Traits & Skills</h2>
-                <p>Technically, I am naturally curious and highly coachable. I excel in environments where adaptability and a willingness to learn are crucial, which has been instrumental in my growth and success in Computer Science.</p>
+                <p>Filler</p>
             </div>
             <div class="image">
                 <img src="https://via.placeholder.com/400x300" alt="Traits & Skills Image">
