Added/Revised index and history
Updated classes to match current, along with adding IP (in progress) classes.

--- a/index.html
+++ b/index.html
@@ -121,13 +121,17 @@
         <p class="intro">Discover my projects, skills, and more.</p>
         <a href="#contact" class="btn">Contact Me</a>
         <div class="image-gallery">
+            <!-- First Gallery Item (About Me) -->
             <a href="AboutMe.html" class="gallery-item">
                 <div class="label">About Me</div>
                 <img src="https://i.pinimg.com/originals/10/53/f2/1053f232bc435bb423f724da75163079.jpg" alt="About Me">
             </a>
-            <div class="gallery-item">
-                <img src="https://via.placeholder.com/200" alt="Project 2">
-            </div>
+            <!-- Second Gallery Item (Career/Class History) -->
+            <a href="history.html" class="gallery-item">
+                <div class="label">Career/Class History</div>
+                <img src="https://geology.missouri.edu/sites/default/files/fp-img-background/columns_03.jpg" alt="Career/Class History">
+            </a>
+            <!-- Third Gallery Item Placeholder -->
             <div class="gallery-item">
                 <img src="https://via.placeholder.com/200" alt="Project 3">
             </div>
