--- a/index.html
+++ b/index.html
@@ -121,20 +121,18 @@
         <p class="intro">Discover my projects, skills, and more.</p>
         <a href="#contact" class="btn">Contact Me</a>
         <div class="image-gallery">
-            <!-- First Gallery Item (About Me) -->
             <a href="AboutMe.html" class="gallery-item">
                 <div class="label">About Me</div>
                 <img src="https://i.pinimg.com/originals/10/53/f2/1053f232bc435bb423f724da75163079.jpg" alt="About Me">
             </a>
-            <!-- Second Gallery Item (Career/Class History) -->
             <a href="history.html" class="gallery-item">
                 <div class="label">Career/Class History</div>
-                <img src="https://geology.missouri.edu/sites/default/files/fp-img-background/columns_03.jpg" alt="Career/Class History">
+                <img src="https://live.staticflickr.com/8152/7140500393_564e9c342d_b.jpg" alt="Career/Class History">
             </a>
-            <!-- Third Gallery Item Placeholder -->
-            <div class="gallery-item">
-                <img src="https://via.placeholder.com/200" alt="Project 3">
-            </div>
+            <a href="projects.html" class="gallery-item">
+                <div class="label">Projects</div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/QA-project.jpg" alt="Projects">
+            </a>
         </div>
     </div>
 </body>
